# FactRank

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CNAME  LICENSE  Makefile  Pipfile  README.md  endpoint.py  extractor.py  helper.py  index.html  learner.py  parser.py  pyproject.toml  setup.py  trained_model.pkl
archive/: ip209x.pkl
css/: app.4a9ec960.css  app.fda8013d.css  chunk-vendors.fc47f5ed.css
data/: sentence_dump_1.0_28.04.2019.csv  sentences_dump_17.12.csv  sentences_dump_20.12.csv  sentences_dump_28.12.csv
demo/: .env  .eslintrc.js  README.md  auth_config.json  index.html  package-lock.json  package.json
factrank/: __init__.py  evaluate.py  factnet.py  log.py  model.py  modules.py  options.py  processing.py  tokenize.py  train.py
js/: app.04331b09.js  app.04331b09.js.map  app.9cf7b165.js  app.9cf7b165.js.map  app.b007390e.js  app.b007390e.js.map  chunk-vendors.0ce119d8.js  chunk-vendors.50997623.js  chunk-vendors.c968d1c4.js  noprefetch-78-EUC-H-bcmap.293dcd20.js  noprefetch-78-EUC-H-bcmap.293dcd20.js.map  noprefetch-78-EUC-V-bcmap.f4f8f531.js  noprefetch-78-EUC-V-bcmap.f4f8f531.js.map  noprefetch-78-H-bcmap.85ac980f.js  noprefetch-78-H-bcmap.85ac980f.js.map  noprefetch-78-RKSJ-H-bcmap.5427750b.js  noprefetch-78-RKSJ-H-bcmap.5427750b.js.map  noprefetch-78-RKSJ-V-bcmap.0649026d.js  noprefetch-78-RKSJ-V-bcmap.0649026d.js.map  noprefetch-78-V-bcmap.dae13841.js  noprefetch-78-V-bcmap.dae13841.js.map  noprefetch-78ms-RKSJ-H-bcmap.46f56745.js  noprefetch-78ms-RKSJ-H-bcmap.46f56745.js.map  noprefetch-78ms-RKSJ-V-bcmap.ab9c9f11.js  noprefetch-78ms-RKSJ-V-bcmap.ab9c9f11.js.map  noprefetch-83pv-RKSJ-H-bcmap.e749913e.js  noprefetch-83pv-RKSJ-H-bcmap.e749913e.js.map  noprefetch-90ms-RKSJ-H-bcmap.9839985d.js  noprefetch-90ms-RKSJ-H-bcmap.9839985d.js.map  noprefetch-90ms-RKSJ-V-bcmap.b2231361.js  noprefetch-90ms-RKSJ-V-bcmap.b2231361.js.map  noprefetch-90msp-RKSJ-H-bcmap.4178fdc4.js  noprefetch-90msp-RKSJ-H-bcmap.4178fdc4.js.map  noprefetch-90msp-RKSJ-V-bcmap.eafd9861.js  noprefetch-90msp-RKSJ-V-bcmap.eafd9861.js.map  noprefetch-90pv-RKSJ-H-bcmap.aab1ad5a.js  noprefetch-Add-H-bcmap.b6d65bf8.js  (+310 more)
(+103 files in other folders)
