[tool.poetry]
name = "factrank"
version = "0.2.0"
description = "Check-Worthiness Detection in Dutch"
authors = ["Rafael Hautekiet <rafaelhautekiet@gmail.com>"]
license = "MIT"
exclude = ["factrank/data/training/*", "factrank/data/word_embeddings/*"]

[tool.poetry.dependencies]
python = "^3.7"
pyyaml = "*"
spacy = "==2.1.8"
nl_core_news_sm = { url="https://github.com/explosion/spacy-models/releases/download/nl_core_news_sm-2.1.0/nl_core_news_sm-2.1.0.tar.gz" }
torchtext = "*"
torch = "*"
dickens = "*"
gensim = "*"

[tool.poetry.dev-dependencies]
sklearn = "*"
pandas = "*"
matplotlib = "*"
pytest = "*"
transformers = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
