[tool.poetry]
name = "factrank"
version = "0.2.0"
description = "Check-Worthiness Detection in Dutch"
authors = ["Rafael Hautekiet <rafaelhautekiet@gmail.com>"]
license = "MIT"
exclude = ["factrank/data/training/*", "factrank/data/word_embeddings/*"]

[tool.poetry.dependencies]
python = "^3.7"
pyyaml = "*"
spacy = "==2.1.8"
nl_core_news_sm = { url="https://github.com/explosion/spacy-models/releases/download/nl_core_news_sm-2.1.0/nl_core_news_sm-2.1.0.tar.gz" }
torchtext = "0.8.0"
torch = "1.7.0"
dickens = "*"
gensim = "*"
sklearn = "*"

[tool.poetry.dev-dependencies]
pandas = "*"
matplotlib = "*"
pytest = "*"
transformers = "*"
yapf = "*"
pre-commit = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
